@@ -51,13 +51,28 @@ Box::Box()
 
 int Box::execute(void)
 {
-
   double X = x.getValue();
   double Y = y.getValue();
   double Z = z.getValue();
   double L = l.getValue();
   double H = h.getValue();
   double W = w.getValue();
+
+  if ( L < gp::Resolution() ) {
+    setError("Length of '%.6f' too small", L);
+    return 1;
+  }
+
+  if ( H < gp::Resolution() ) {
+    setError("Height of '%.6f' too small", H);
+    return 1;
+  }
+
+  if ( W < gp::Resolution() ) {
+    setError("Width of '%.6f' too small", W);
+    return 1;
+  }
+
 	// Build a box using the dimension and position attributes
 	BRepPrimAPI_MakeBox mkBox( gp_Pnt( X, Y, Z ), L, H, W );
 
